displacement-map-like effects to be repeated as desired.

Changed internal representation of alias'es in order
to maintain information about links for programs like
rshow that work from frozen octrees.  Added a special
alias modifier keyword, "inherit", to indicate that
an alias should get the same modifier as the original
target to simplify common alias usage for material
substitution.

Increased default oconv -n value to 6.  Since triangle
meshes commonly have six faces joining at each vertex,
values less than this cause resolution-limited voxel
subdivision.  Increased default -r option to 16384
as well.  Also increased maximum internal set size
from 127 to 511, to accommodate difficult mesh
models where many faces come together at a point.
This required a little reprogramming in for couple
of recursive routines using sets to avoid overrunning
the stack limit.

==============================
Version 3.6

Modified 4-byte RGBE encoding routine to avoid problems
when one or two primary values is negative and the other(s)
positive.  This used to generate some strange color values.

Added -oc option to rtrace to output local (u,v) coordinates.

Fixed bugs in local uv and j unit vector variables in src/rt/func.c.

Added warning message to OpenGL rendering routines about new
mesh primitive, which we cannot currently render.

Added -if, -id, -of, and -od options to rcalc to provide for
binary float and double i/o.

****************** COMPATIBILITY CHANGE ***********************
Changed holodeck format to used off_t instead of long for beam
positions, which allows holodecks to grow to system file size limit.

Fixed wrapping long in source hit test code, which would cause
odd horizontal lines in some very long renderings.

Added -f and -w options to ra_tiff to create IEEE float and 16-bit/primary
TIFF output, respectively.  These formats are also understood on reverse
conversion.  (16-bit/primary has been understood for some time, but not
IEEE float.)